# feishu-chat

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  db.py  main.py  mcp_server.py  schemas.py
app/agent/: __init__.py  exceptions.py  memory.py  parameter_extractor.py  permission_engine.py  planner.py  policy.py  prompts.py  runtime.py  session_processor.py  session_store.py  subagent_manager.py  subagent_registry.py  subgoal_planner.py  subgoal_state_manager.py  task_classifier.py  tool_bridge.py  types.py  verifier.py
app/services/: __init__.py  bot.py  feishu.py  knowledge_base.py  llm.py  mcp_scheduler.py  service_api.py
docs/: agent-runtime-architecture.md  deployment-readiness-review.md  feishu-open-platform.md  local-deployment-acceptance.md  mcp-integration.md  production-deployment.md
tests/: test_agent_api.py  test_agent_parameter_extractor_and_state_manager.py  test_agent_planner_and_verifier.py  test_agent_runtime.py  test_agent_session_processor_and_permissions.py  test_agent_subagent_manager.py  test_agent_subagent_runtime_flow.py  test_agent_task_classifier_and_subgoal_planner.py  test_agent_tool_bridge.py  test_bot_agent_runtime.py  test_bot_commands.py  test_bot_vision_and_summary.py  test_knowledge_base.py  test_llm_api_and_mcp.py  test_mcp_and_send_message.py  test_mcp_scheduler.py
